--- a/xcijava01/.classpath
+++ b/xcijava01/.classpath
@@ -7,5 +7,6 @@
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="/Users/jun/Downloads/lombok.jar"/>
+	<classpathentry kind="lib" path="/Users/jun/Desktop/dev/roll.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
