--- a/xciweb01/src/main/webapp/WEB-INF/web.xml
+++ b/xciweb01/src/main/webapp/WEB-INF/web.xml
@@ -10,6 +10,21 @@
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
   
+  <!-- 
+  	<filter>
+  		<filter-name>character encoding</filter-name>
+  		<filter-class>org.apache.catalina.filters.SetCharacterEncodingFilter</filter-class>
+  		<init-param>
+  			<param-name>encoding</param-name>
+  			<param-value>UTF-8</param-value>
+  		</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>character encoding</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+ -->
+  
 <!--    <servlet>
     <servlet-name>helloServlet</servlet-name>
     <servlet-class>basic.HelloServlet</servlet-class>
